[fix] wrap suggestions inside suggestion box
long suggestions now wrap around the box instead of going overboard.

--- a/searx/static/themes/oscar/less/pointhi/results.less
+++ b/searx/static/themes/oscar/less/pointhi/results.less
@@ -64,6 +64,14 @@
 // suggestion
 .suggestion_item {
     margin: 2px 5px;
+    max-width: 100%;
+
+    .btn {
+        max-width: 100%;
+        white-space: normal;
+        word-wrap: break-word;
+        text-align: left;
+    }
 }
 
 // download result
